[package]
name = "rpg"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
base64 = "0.13.1"
stellar-xdr = { git = "https://github.com/stellar/rs-stellar-xdr", features = ["serde", "base64", "next"] }
soroban-spec = { git = "https://github.com/stellar/rs-soroban-sdk" }
serde = "1.0.147"
serde_derive = "1.0.147"
serde_json = "1.0.87"
ureq = { version = "2.5.0", features = ["json"] }
backoff = "0.4.0"
csv = "1.1.6"
sha256 = "1.1.1"
